# elfix-deb

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  THANKS  TODO  autogen.sh  config.h.in  configure  configure.ac  elfix_0.9.2.orig.tar.gz.delta  elfix_0.9.2.orig.tar.gz.id  fix-gnustack.c  get_gnu_stack.c  parse-elf.c  test_asm.c  test_good.c
debian/: README.md  changelog  control  gbp.conf  rules
doc/: Makefile.am  Makefile.in  fix-gnustack.1  fix-gnustack.pod  make.sh  paxctl-ng-design.txt  paxctl-ng.1  paxctl-ng.pod  revdep-pax.1  revdep-pax.pod
misc/: Makefile  alt-revdep-pax  clear-dt-path.c  eheader.c  install-xattr-bundle.sh  link_map.py  link_maps  link_maps_portage  paxctl-xattr.c  print-sections.c  revdep-pax-ng
misc/change-interp/: Makefile  change-interp.c
misc/elf-manipulate/: Makefile  parse-elf.c
misc/fix-gnustack/: ChangeLog  Makefile.am  autogen.sh  configure.ac  fix-gnustack.c
misc/fix-gnustack/doc/: Makefile.am  fix-gnustack.1  fix-gnustack.pod  make.sh
misc/fix-gnustack/tests/: Makefile.am  bad-gnustack.c  gnustacktest.sh
misc/install-xattr/: .gitignore  ChangeLog  Makefile  checkcopyattrs.sh  configure.ac  install-xattr.c
misc/install-xattr.c/: Makefile.am  install-xattr.c
misc/install.wrapper.c/: .gitignore  Makefile.am  checkcopyattrs.sh  configure.ac  getfatter.sh  install.wrapper.c  setfatter.sh
misc/ldd/: ldd.py
misc/mangle-paxflags/: mangle-paxflags.c
misc/paxmark-libs/: testpax.c
misc/test-revdep-pax/: Makefile.am  README  configure.ac  libmyrevdeppax.c  testrevdeppax-0.1.ebuild  testrevdeppax.c  testrevdeppax.sh
poc/: Makefile.am  bad-mmap.c  mangle-paxflags.c  paxctl-xattr.c
poc/paxmark-libs/: Makefile.am  README  libmypax.c  testdlpax.c
pocs/change-interp/: change-interp.c
pocs/elf-manipulate/: clear-dt-path.c  remove-ptpax.c
pocs/ldd/: ldd.py
pocs/link-graph/: link_graph.py  link_graph_test
pocs/link-maps/: link_map_test
pocs/mangle-paxflags/: Makefile  poc.sh
pocs/paxmark-libs/: Makefile.am  configure.ac
scripts/: Makefile.am  Makefile.in  migrate  migrate-pax  pax-mark  paxmark.sh  paxmodule.c  pypaxctl  revdep-pax  revdep-paxmark  setup.py
src/: Makefile.am  Makefile.in  fix-gnustack.c  paxctl-ng.c
tests/: Makefile.am  Makefile.in  bad-gnustack.c  bad.c  bad32.asm  good.c  test-bad.asm  test-bad32.asm  test-bad64.asm
tests/gnustack/: Makefile.am  bad-gnustack.c  bad32.s  bad64.asm  bad64.s  gnustacktest.sh
tests/paxmodule/: Makefile.am  Makefile.in  paxmodtest.sh
tests/pxtpax/: Makefile  Makefile.am  Makefile.in  daemon.c  daemontest.sh  dotest.sh  init.sh  test.sh
tests/revdeppaxtest/: Makefile.am  Makefile.in  librevdeplib.c  revdepbin.c  revdeptest.sh
